--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="socials">
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/vishnu-kiran-dabbara/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/DVishnuKiran" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="github" aria-label="GitHub" href="https://vishnudabbara.github.io/" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="" target="_blank"><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
@@ -352,7 +352,7 @@
           <p> <i class="fas fa-map-marked-alt"></i>Ohio, United States-44502</p>
           <div class="share">
             <a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/vishnu-kiran-dabbara/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a class="github" aria-label="GitHub" href="https://github.com/DVishnuKiran" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="github" aria-label="GitHub" href="https://vishnudabbara.github.io/" target="_blank"><i class="fab fa-github"></i></a>
             <a class="twitter" aria-label="Twitter" href="" target="_blank"><i class="fab fa-twitter"></i></a>
             <a class="instagram" aria-label="Instagram" href="" target="_blank"><i class="fab fa-instagram" target="_blank"></i></a>
           </div>
